--- a/busdrive/ios/Runner/Info.plist
+++ b/busdrive/ios/Runner/Info.plist
@@ -45,5 +45,24 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+
+	<key>GMSApiKey</key>
+	<string>AIzaSyAw_JKxikQSCVB_QccweBoxrmKitqptLJs</string>
+
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>We need your location to show your current location.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>We need your location to show your current location.</string>
+<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+<string>We need your location to show your current location.</string>
+<key>NSAppTransportSecurity</key>
+<dict>
+  <key>NSAllowsArbitraryLoads</key>
+  <true/>
+</dict>
+
 </dict>
 </plist>
