--- a/busdrive/pubspec.yaml
+++ b/busdrive/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
 
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.9.3
+  google_maps_flutter: ^2.7.0
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
+  http: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
