--- a/busdrive/pubspec.yaml
+++ b/busdrive/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   geocoding: ^3.0.0
   geolocator: ^12.0.0
   http: ^1.2.2
+  uuid: ^4.4.2
+  permission_handler: ^11.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
