--- a/busdrive/pubspec.yaml
+++ b/busdrive/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.2
   uuid: ^4.4.2
   permission_handler: ^11.3.1
+  font_awesome_flutter: ^10.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
